# TRACE

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: facade.py  policies.py  ports.py  types.py
agent/langchain/: __init__.py  engine.py  message_codec.py  model_factory.py  tracing.py
app/: checkpoint_runner.py  checkpoints.py  container.py  contracts.py  errors.py  progress.py  round_outputs.py  stage_graphs.py  stage_runtime.py  state.py  tplan_runner.py  transition_policy.py
artifacts/: __init__.py  models.py  selectors.py  store.py  summarizer.py
configs/: app.yaml  model.yaml
configs/stages/: ground.yaml  logical.yaml  physical.yaml
examples/: offline_demo.py
experiments/: demo.md
prompts/: ground.md  logical.md  physical.md
skills/tgraph-iac/: SKILL.md
src/: trace_cli.py
src/trace/: __init__.py  main.py
src/trace_agent/: __init__.py  agent.py  memory.py  model_provider.py  prompting.py  tools.py
stages/: __init__.py  registry.py
stages/ground/: __init__.py  constraint_refs.py  guard.py  normalize.py  output_schema.py  spec.py
stages/logical/: __init__.py  guard.py  output_schema.py  spec.py
stages/physical/: __init__.py  guard.py  output_schema.py  spec.py
tests/demo/: ground_truth.json
tests/e2e/: test_cli.py  test_cli_run.py
tests/integration/: test_ground_stage.py  test_ground_to_logical.py  test_logical_to_physical.py  test_patch_first_logical.py  test_patch_first_physical.py  test_runtime_pipeline.py
tests/unit/: test_agent_facade.py  test_artifact_selectors.py  test_artifact_store.py  test_checkpoint_runner.py  test_constraint_refs.py  test_contracts.py  test_ground_normalize.py  test_patch_ops.py  test_progress.py  test_stage_graphs.py  test_stage_runtime.py  test_tgraph_graph_view.py  test_tgraph_import.py  test_tgraph_materialize.py  test_tgraph_models.py  test_tgraph_query.py  test_tgraph_serialize.py  test_tgraph_validate_consistency.py  test_tgraph_validate_schema.py  test_tool_policy.py  test_tplan_runner.py  test_tracing.py
tools/: policy.py  registry.py
tools/knowledge/: list_topics.py  read_doc.py  search.py
tools/tgraph/: __init__.py  (+1 more)
validators/: patching.py  report.py  tgraph_runner.py
(+184 files in other folders)
