[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-core"
version = "0.1.0"
description = "TRACE core runtime rewrite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=1.2,<1.3",
  "langgraph>=1.1.1,<1.2",
  "langchain-openai>=1.1,<1.2",
  "langsmith>=0.7,<0.8",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "typer>=0.12,<1.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
trace = "trace_cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["trace_cli"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
